Use a local version of less.js for during development.

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <!-- Javascript -->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.6.1/less.min.js"></script>
+    <script src="/static/js/vendor/less.js"></script>
     <script src="/static/js/vendor/jquery-2.2.2.min.js"></script>
     <script src="/static/js/vendor/jcanvas.min.js"></script>
     <script src="/static/js/levels.js"></script>
