Make bold Monsterrat font available for use

--- a/static/css/index.less
+++ b/static/css/index.less
@@ -21,6 +21,11 @@
   src: url('/static/fonts/Montserrat-Regular.otf');
 }
 
+@font-face {
+  font-family: 'Monsterrat-Bold';
+  src: url('/static/fonts/Montserrat-Bold.otf');
+}
+
 // RESET
 * {
   margin: 0;
