--- a/static/css/index.less
+++ b/static/css/index.less
@@ -75,6 +75,7 @@ html, body {
       text-align: center;
       background-color: #000000;
       border: 1px #FFFFFF solid;
+      font-size: 1.5em;
 
       canvas {
         display: inline;
@@ -83,7 +84,6 @@ html, body {
       #score-container {
         width: 100%;
         height: 1.5em;
-
 
         .moves {
           .FloatPad(left, 5px);
