Add global and level timers and linke them up to updates

--- a/static/css/index.less
+++ b/static/css/index.less
@@ -91,6 +91,8 @@ html, body {
 
         .time {
           .FloatPad(right, 5px);
+          width: 150px;
+          text-align: left;
         }
 
         .hidden {
