Always show time for now

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
                 <canvas width="600" height="600" id="game-canvas">Your browser does not support HTML5.</canvas>
                 <div id="score-container">
                     <div class="moves">Moves: <span class="value">0</span></div>
-                    <div class="time hidden">Time: <span class="value">00:00</span></div>
+                    <div class="time"><!--"time hidden"-->Time: <span class="value">00:00</span></div>
                 </div>
             </section>
         </main>
