--- a/static/css/index.less
+++ b/static/css/index.less
@@ -31,13 +31,13 @@
   margin: 0;
   padding: 0;
   color: @textColor;
-  font-family: "Monsterrat", Arial, sans-serif;
 }
 
 // CSS
 html, body {
   height: 100%;
   background-color: darken(@baseColor, 25%);
+  font-family: "Monsterrat", Arial, sans-serif;
 }
 
 #content-container {
@@ -84,6 +84,7 @@ html, body {
       #score-container {
         width: 100%;
         height: 1.5em;
+        font-family: 'Consolas', monospace;
 
         .moves {
           .FloatPad(left, 5px);
